k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securing-web
  namespace: securing-web
spec:
  type: NodePort
  selector:
    app: securing-web
  ports:
    - name: http
      port: 8085
      targetPort: 8085
      # NodePort for quick local access on Docker Desktop
      nodePort: 30085
